package fr.univlille.labyrinth;

import fr.univlille.labyrinth.model.GameMode;
import fr.univlille.labyrinth.model.Player;

public class Main {

    public static GameMode startGame() {
        return null;
    }

    public static void movePlayerPosition(GameMode game, String direction) {

    }

    public static void displayProgress(Player player) {

    }

    public static void savePlayer(Player player) {

    }
}
