@startuml
skinparam monochrome true
skinparam shadowing true
skinparam classAttributeIconSize 0

class Maze {
  - width: int
  - height: int
  - grid: boolean[][]
  - playerPosition: Position
  + Maze(width: int, height: int, wallPercentage: int)
}

class Player {
  - name: String
  - score: int
  + Player(name: String)
  + addScore(points: int)
}

class PlayerProgress {
  + markChallengeCompleted(challenge: Challenge)
}

class Position {
  - x: int
  - y: int
  + Position(x: int, y: int)
}

abstract class GameMode {
  + start()
  + createMaze(): Maze
  + movePlayer(direction: String)
}

class FreeMode {
  + start()
  + createMaze(): Maze
}

class ProgressionMode {
  + start()
  + createMaze(): Maze
  + loadProgress(progress: PlayerProgress)
}

class Stage {
  - number: int
  + Stage(number: int)
}

class Challenge {
  - difficulty: String
  - width: int
  - height: int
  - wallPercentage: int
  - completed : boolean
  + Challenge(difficulty: String)
  + validate()
}

class Main {
  startGame(player: Player) : GameMode
  movePlayer(game: GameMode, direction: String)
  displayProgress(player: Player)
  loadGame(game: GameMode, player: Player)
  
  'displayProgress(player: Player)'
}

class PlayerDatabase {
  {static} + savePlayer(player: Player)
  {static} + loadPlayer(name: String): Player
  {static} + playerExists(name: String): boolean
}

Maze --> "playerPosition" Position

GameMode --> "player" Player
GameMode --> "currentMaze" Maze

GameMode <|-- FreeMode
GameMode <|-- ProgressionMode
Stage --> "challenges 3" Challenge

Player --> "progress" PlayerProgress
PlayerProgress --> "stageProgress 3" Stage 
@enduml
